<resources>

    <!-- Application -->
    <string name="app_name">Math Tutor</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings_title">Settings</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_activity_math_tutor">Math Tutor</string>

    <!-- Main menu -->
    <string name="button_start_endless">Endless Mode</string>
    <string name="button_start_quiz">Quiz Mode</string>
    <string name="dialog_quiz_number_of_probs">How many problems?</string>
    <string name="dialog_quiz_start">Start</string>
    <string name="dialog_quiz_cancel">Cancel</string>
    <string name="quiz_length">quiz length</string>
    <string name="button_howto">Instructions</string>
    <string name="button_show_progress">View Progress</string>

    <!-- How To -->
    <string name="title_activity_howto">Instructions</string>
    
    <!-- Difficulty menu -->
    <string name="easy_label">Easy Difficulty</string>
    <string name="medium_label">Medium Difficulty</string>
    <string name="hard_label">Hard Difficulty</string>
    <string name="title_activity_progress">Progress Activity</string>
    
    <!-- Preferences -->
    <string name="menu_toggle_sound_title">Toggle Sound</string>
    <string name="toggle_sound_off">Mute Sounds</string>
    <string name="toggle_sound_on">Play Sounds</string>
    <string name="key_use_sound">use_sound</string>
    <string name="pref_use_sound_title">Enable sounds</string>
    <string name="pref_use_sound_summary">Play sounds in the main menu and during the game</string>
    <string name="key_which_animal">which_animal</string>
    <string name="pref_which_animal_title">Select animal to feed</string>
    <string name="pref_which_animal_summary">This is the animal you feed answers to</string>
    <string name="pref_which_animal_dialog">Which animal?</string>
    
    <!-- Progress -->
    <string name="diff_label">Problem Difficulty</string>
    <string name="diff_any">Any</string>
    <string name="diff_easy">Easy (Numbers 10 or less)</string>
    <string name="diff_medium">Medium (Numbers 20 or less)</string>
    <string name="diff_hard">Hard (Numbers 100 or less)</string>
    <string name="type_label">Problem Type</string>
    <string name="type_any">Any</string>
    <string name="type_add">Addition</string>
    <string name="type_sub">Subtraction</string>
    <string name="pref_submit">Generate Statistics</string>

</resources>