<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menuLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/button_endless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:onClick="startEndless" 
        android:text="@string/button_start_endless" />
    
    <Button 
        android:id="@+id/button_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_start_quiz"
        android:onClick="selectQuizLength" />
    
    <Button
        android:id="@+id/button_howto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_howto"
		android:onClick="showHowto" />

	<Button 
        android:id="@+id/button_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_show_progress"
        android:onClick="showProgress" />
    
</LinearLayout>